crates/uitest/fixtures/name_resolution/import_ambiguous.snap
---
source: crates/uitest/src/lib.rs
expression: diags
input_file: crates/uitest/fixtures/name_resolution/import_ambiguous.fe
---
error[2-0004]: `S` is ambiguous
   ┌─ import_ambiguous.fe:2:9
   │
 2 │ pub use S
   │         ^ `S` is ambiguous
   ·
11 │         struct S {}
   │                - candidate `#0`
   ·
14 │         struct S {}
   │                - candidate `#1`

error[2-0004]: `S` is ambiguous
   ┌─ import_ambiguous.fe:7:13
   │
 7 │     pub use S
   │             ^ `S` is ambiguous
   ·
11 │         struct S {}
   │                - candidate `#0`
   ·
14 │         struct S {}
   │                - candidate `#1`


